fixtures/go/test_double/should_fail/runtime_fake.go
package application

type FakeUserRepository struct{}

func (repo FakeUserRepository) Get(userID string) string {
	return userID
}
